--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
-#Wed May 21 00:59:17 UTC 2025
-allow-flight=false
+#Wed May 21 02:57:38 UTC 2025
+allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
